--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,7 +13,7 @@
 
 {{ template "_internal/schema.html" . }}
 
-<link rel="stylesheet" href="css/layout.css" />
+<link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
 <link href="https://fonts.googleapis.com/css?family=Oswald:500|Rubik:400,500" rel="stylesheet">
 
 {{ template "_internal/google_analytics_async.html" . }}
