--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,6 +15,7 @@
 
 <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
 <link href="https://fonts.googleapis.com/css?family=Oswald:500|Rubik:400,500" rel="stylesheet">
+<link rel="shortcut icon" href="{{ .Site.Params.Favicon }}">{{ end }}
 
 {{ template "_internal/google_analytics_async.html" . }}
 
@@ -29,6 +30,6 @@
 {{ else }}
     {{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}
 {{ end }}
-</title>
+</title> {{ if .Site.Params.Favicon }}
 
 </head>
