--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,6 +30,6 @@
 {{ else }}
     {{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}
 {{ end }}
-</title> {{ if .Site.Params.Favicon }}
+</title>
 
 </head>
