--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
 
 <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
 <link href="https://fonts.googleapis.com/css?family=Oswald:500|Rubik:400,500" rel="stylesheet">
-<link rel="shortcut icon" href="{{ .Site.Params.Favicon }}">
+<link rel="shortcut icon" href="{{ "/favicon.ico" | relURL }}">
 
 {{ template "_internal/google_analytics_async.html" . }}
 
