Adjusting link favicon
Re-adjusting relative link

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,10 +17,10 @@
 <link href="https://fonts.googleapis.com/css?family=Oswald:500|Rubik:400,500" rel="stylesheet">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
+<link rel="shortcut icon" href="./favicon.ico">
+<link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="./favicon-194x194.png" sizes="194x194">
 
 {{ template "_internal/google_analytics_async.html" . }}
 
