--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,18 @@
 <link rel="icon" type="image/png" href={{ "./favicon-96x96.png" | relURL }} sizes="96x96">
 <link rel="icon" type="image/png" href={{ "./favicon-194x194.png" | relURL }} sizes="194x194">
 
-{{ template "_internal/google_analytics_async.html" . }}
+<!-- {{ template "_internal/google_analytics_async.html" . }} -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102517378-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 {{ if .RSSLink }}
 <link href="{{ .RSSLink }}" rel="alternate feed" type="application/rss+xml" title="{{ .Site.Title }}"/>
