--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,15 +37,15 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Clever Laziness">
-<link rel="apple-touch-icon" sizes="57x57" href="{{ /apple-touch-icon-57x57.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="60x60" href="{{ /apple-touch-icon-60x60.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="72x72" href="{{ /apple-touch-icon-72x72.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="76x76" href="{{ /apple-touch-icon-76x76.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="114x114" href="{{ /apple-touch-icon-114x114.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="120x120" href="{{ /apple-touch-icon-120x120.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="144x144" href="{{ /apple-touch-icon-144x144.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="152x152" href="{{ /apple-touch-icon-152x152.png" | relURL }}>
-<link rel="apple-touch-icon" sizes="180x180" href="{{ /apple-touch-icon-180x180.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="57x57" href={{ "/apple-touch-icon-57x57.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="60x60" href={{ "/apple-touch-icon-60x60.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="72x72" href={{ "/apple-touch-icon-72x72.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="76x76" href={{ "/apple-touch-icon-76x76.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="114x114" href={{ "/apple-touch-icon-114x114.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="120x120" href={{ "/apple-touch-icon-120x120.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="144x144" href={{ "/apple-touch-icon-144x144.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="152x152" href={{ "/apple-touch-icon-152x152.png" | relURL }}>
+<link rel="apple-touch-icon" sizes="180x180" href={{ "/apple-touch-icon-180x180.png" | relURL }}>
 <link rel="mask-icon" color="#39A4FE" href={{ "/safari-pinned-tab.svg" | relURL }}>
 
 <!-- Google Analytics -->
