--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,8 @@
   <footer class="foot">
   {{ partial "social-links-footer.html" . }}
-  <div class="copyright">&copy {{ .Site.Copyright }} </div>
+  <!-- <div class="copyright">&copy {{ .Site.Copyright }} </div> -->
+  <div class="copyright"><a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}Copyright {{ end }}</a>&copy{{ .Site.Copyright }}</div>
+
   </footer>
 
 </body>
