--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -364,12 +364,20 @@ nav {
 
 .copyright {
   font: 15px Oswald, sans-serif;
+  text-decoration: none;
   color: #3d3d3d;
   text-align: center;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
+.copyright a {
+  text-decoration: none;
+}
+
+.copyright a:hover {
+  color: #39A4FE;
+}
 
 /* 404 */
 .err-404 {
