--- a/layouts/partials/social-links-footer.html
+++ b/layouts/partials/social-links-footer.html
@@ -1,8 +1,8 @@
 <nav class="foot-nav">
   <div class="social-links-footer">
     {{with .Site.Params.twitter}}
-    <a href="https://twitter.com/{{.}}"><img class="social-link" src="img/twitter.svg" /></a>
+    <a href="https://twitter.com/{{.}}" title="Follow me on Twitter"><img class="social-link" src="img/twitter.svg" /></a>
     {{end}}
-    <a href="{{ .Site.RSSLink }}" target="_blank"><img class="social-link" src="img/rss.svg" /></a>
+    <a href="{{ .Site.RSSLink }}" target="_blank" title="Subscribe to the feed"><img class="social-link" src="img/rss.svg" /></a>
   </div>
 </nav>
