Further logo adjustments

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,8 +10,7 @@
 <div class="header-bar">
   <nav class="siteTitle">
     <div class="brand">
-  		<a href='{{ .Site.BaseURL }}' title="Autobot"><img class="logo" src="img/logo.png" rel="Autobot"/></a>
-      <a href='{{ .Site.BaseURL }}' title="Clever Laziness"><img class="name" src="img/brand.png" rel="Clever Laziness"/></a>
+      <a href='{{ .Site.BaseURL }}' title="Clever Laziness"><img class="logo" src="img/logo.png" rel="Autobot"/>Clever<br/>Laziness</a>
     </div>
     <div class="nav-item">
       <a class="nav-item-title" href='{{ .Site.BaseURL }}post' title="Previous articles">{{ with .Site.Params.posts }}{{ . }}{{ else }}Posts{{ end }}</a>
