--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,7 +16,7 @@
 
 <link rel="canonical" href="{{ .Permalink }}">
 {{ if .RSSLink }}
-<link href="{{ .RSSLink }}" rel="alternate feed" type="application/rss+xml" title="{{ .Site.Title }}"/>
+<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}"/>
 {{ end }}
 <base href="{{ .Site.BaseURL }}" />
 {{ template "_internal/opengraph.html" . }}
