--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Rubik', sans-serif;
+  font-weight: 400;
   counter-reset: heading;
   margin: 0;
   padding: 1em 0.5em 0.5em 0.5em;
@@ -51,7 +52,7 @@ img {
 figcaption {
   text-align: center;
   font-size: 0.9em;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 iframe {
@@ -86,57 +87,37 @@ a {
 
 /* Head Nav  */
 .header-bar {
-  padding-top: 20px;
-  padding-bottom: 75px;
-}
-
-nav {
   font-family: 'Oswald', sans-serif;
-  font-size: 22px;
-  text-align: center;
   text-transform: uppercase;
-  display: grid;
-  width: 100%;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 65px;
 }
 
 .siteTitle {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  font-size: 50px;
 }
 
 .brand {
-  font-family: 'Oswald', sans-serif;
   font-weight: 500;
-  font-size: 1em;
-  line-height: 1.2em;
-  padding-top: 3px;
 }
 
 .brand a {
-  display: flex;
   text-decoration: none;
-}
-
-.logo {
-  max-width: 50px;
-  margin: 5px;
-  padding: 0 5px;
-  border-radius: 50%;
 }
 
 .nav-item {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  font-size: 1.2em;
-  text-align: center;
+  padding-top: 10px;
 }
 
 .nav-item-title {
+  font-weight: 400;
+  font-size: 20px;
   border-bottom: 1.5px solid #6DBDFE;
   margin: 0 5px;
-  /*padding: 3px;*/
-  font-weight: 500;
 }
 
 .nav-item .nav-item-title {
@@ -150,6 +131,7 @@ nav {
 
 /* Post Preview List */
 .post-preview {
+  font-weight: 400;
   text-decoration: none;
   padding-bottom: 45px;
   margin: 0;
@@ -157,11 +139,10 @@ nav {
 }
 
 .post-preview .title {
-  font-size: 32px;
-  font-weight: 400;
+  font-size: 30px;
   text-align: left;
   margin: 0;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
   padding-bottom: 32px;
 }
 
@@ -171,17 +152,16 @@ nav {
 
 .post-preview .date {
   font-size: 14px;
-  font-weight: 400;
   color: #999999;
   display: flex;
   justify-content: space-between;
-  padding: 25px 20px;
+  padding: 25px 0;
 }
 
 .post-preview .summary {
   font-size: 16px;
   line-height: 1.7em;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
   padding-right: 20px;
 }
 
@@ -193,6 +173,7 @@ nav {
 
 /* Post */
 .post {
+  font-weight: 400;
   padding-bottom: 45px;
   margin: 0;
   display: grid;
@@ -200,18 +181,17 @@ nav {
 
 .post .title {
   text-align: left;
-  font-size: 32px;
-  font-weight: 400;
+  font-size: 30px;
   margin: 0;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
 }
 
 .post .content {
   font-size: 16px;
   line-height: 1.7em;
   margin: 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  /*padding-left: 20px;*/
+  /*padding-right: 20px;*/
 }
 
 .post .content {
@@ -221,15 +201,20 @@ nav {
 .post .meta {
   display: flex;
   justify-content: space-between;
-  padding: 1px 20px;
+  padding: 1px 0;
   text-decoration: none;
   font-size: 14px;
-  font-weight: 400;
   color: #999999;
 }
 
 
 /* Archive */
+.content-list {
+  font-size: 1.2em;
+  /*padding-left: 14px;*/
+  font-weight: 400;
+}
+
 .content-item {
   margin: 0.3em;
   padding-bottom: 10px;
@@ -253,19 +238,13 @@ nav {
 .post-list .title {
   margin: 0 0.1em;
   font-size: 22px;
-  font-weight: 400;
   text-align: left;
 }
 
-.content-list {
-  font-size: 1.2em;
-  padding-left: 14px;
-}
-
-.content-list-date {
+/*.content-list-date {
   font-size: 22px;
   text-align: left;
-}
+}*/
 
 
 /* Tags */
@@ -286,91 +265,13 @@ nav {
 
 .terms .term {
   padding-top: 8px;
-  padding-left: 19px;
+  /*padding-left: 19px;*/
 }
 
 .term-title {
   font-size: 22px;
   font-weight: 400;
   text-align: left;
-}
-
-
-/* Footer Links */
-.social-links-footer {
-  font-family: 'Oswald', sans-serif;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-}
-
-.social-links-footer a {
-  /*text-decoration: none;*/
-  padding: 0 12px 20px 10px;
-}
-
-.social-link {
-  margin: 20px 0 1px 0;
-  max-width: 20px;
-}
-
-
-/* Foot Nav */
-.foot {
-  padding-top: 50px;
-}
-
-.post-footer-menu {
-  display: flex;
-  justify-content: space-between;
-  font-size: 0.8em;
-  margin: 0.5em 4em;
-}
-
-.post-prev a {
-  text-decoration: none;
-  font-size: 28px;
-  font-weight: 500;
-}
-
-.post-next a {
-  text-decoration: none;
-}
-
-.post-home a {
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.copyright {
-  font: 15px Oswald, sans-serif;
-  text-decoration: none;
-  color: #3d3d3d;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-.copyright a {
-  text-decoration: none;
-}
-
-.copyright a:hover {
-  color: #39A4FE;
-}
-
-/* 404 */
-.err-404 {
-  margin: 3em;
-  text-align: center;
-}
-
-
-/* Sitemap */
-.sitemap {
-    margin: auto;
-    width: 50%;
 }
 
 
@@ -403,41 +304,71 @@ nav {
 }
 
 
+/* Footer */
+.foot {
+  display: grid;
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  padding-top: 50px;
+}
+
+.social-links-footer {
+  display: flex;
+  justify-content: center;
+}
+
+.social-links-footer a {
+  text-decoration: none;
+}
+
+.social-link {
+  text-transform: uppercase;
+  border-bottom: 1.5px solid #6DBDFE;
+  margin: 0 5px;
+}
+
+.social-link:hover {
+  border-bottom: 1.5px solid #39A4FE;
+}
+
+.copyright {
+  font-weight: 400;
+  text-decoration: none;
+  color: #3d3d3d;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 15px;
+}
+
+.copyright a {
+  text-decoration: none;
+}
+
+.copyright a:hover {
+  color: #39A4FE;
+}
+
+/* 404 */
+.err-404 {
+  margin: 3em;
+  text-align: center;
+}
+
+
+/* Sitemap */
+.sitemap {
+    margin: auto;
+    width: 50%;
+}
+
+
 /* Mobile Breakpoint */
 @media only screen and (min-width: 400px) {
 
-  .siteTitle {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 2;
-    text-align: left;
-    flex-basis: 0;
-  }
-
   nav {
-    font-family: 'Oswald', sans-serif;
     flex-flow: row wrap;
-  }
-
-  .nav-item-title {
-    font-family: 'Oswald', sans-serif;
-    font-size: 0.85em;
-    font-weight: 500;
-    margin: 0 5px;
-  }
-
-  .social-links-footer {
-    justify-content: center;
-    flex-flow: row wrap;
-  }
-
-  .social-links-footer a {
-    padding: 0 12px 20px 10px;
-  }
-
-  .social-link {
-    margin: 20px 0 1px 0;
-    max-width: 20px;
   }
 
 }
