--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,6 +22,7 @@
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/schema.html" . }}
+{{ partial "head/seo.html" . }}
 
 <!-- CSS and Google Fonts -->
 <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
