--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -2,14 +2,14 @@
 	<meta name="twitter:card"         content="summary" />
 	<meta name="twitter:site"         content="@cleverlaziness" />
 	<meta name="twitter:creator"      content="@theverylastjuan" />
-	<meta name="twitter:title"        content="{{ .Title }}" />
-	<meta name="twitter:description"  content="{{ .Summary }}" />
-	<meta name="twitter:image"        content="{{ "/logo.png" | relURL }}" />
-	
+	<meta name="twitter:title"        content="" />
+	<meta name="twitter:description"  content="" />
+	<meta name="twitter:image"        content="https://www.cleverlaziness.com/cl-square-1024.png" />
+
 	<!-- Facebook Open Graph -->
 	<meta property="og:site_name"   content="Clever Laziness" />
 	<meta property="og:title"       content="{{ .Title }}" />
 	<meta property="og:url"         content="<a href='{{ .Permalink }}'> {{ .Title }}</a> " />
 	<meta property="og:description" content="{{ .Summary }}" />
-	<meta property="og:image"       content="{{ "/logo.png" | relURL }}" />
+	<meta property="og:image"       content="https://www.cleverlaziness.com/cl-square-1024.png" />
 	<meta property="og:type"        content="article" />
