--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,8 +21,8 @@
 <base href="{{ .Site.BaseURL }}" />
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
+<meta name="twitter:image" content="https://www.cleverlaziness.com/cl-square-144.png" />
 {{ template "_internal/schema.html" . }}
-{{ partial "seo.html" }}
 
 <!-- CSS and Google Fonts -->
 <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
