--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -141,7 +141,7 @@ a {
 
 .post-preview .title {
   font-size: 30px;
-  text-align: left;
+  text-align: center;
   margin: 0;
   /*padding-left: 20px;*/
   padding-bottom: 32px;
@@ -181,7 +181,7 @@ a {
 }
 
 .post .title {
-  text-align: left;
+  text-align: center;
   font-size: 30px;
   margin: 0;
   /*padding-left: 20px;*/
@@ -370,76 +370,6 @@ a {
 
   nav {
     flex-flow: row wrap;
-  }
-
-  .post-preview {
-    font-weight: 400;
-    text-decoration: none;
-    padding-bottom: 45px;
-    margin: 0;
-    display: grid;
-  }
-
-  .post-preview .title {
-    font-size: 30px;
-    text-align: left;
-    margin: 0;
-    /*padding-left: 20px;*/
-    padding-bottom: 32px;
-  }
-
-  .post-preview a {
-    text-decoration: none;
-  }
-
-  .post-preview .date {
-    font-size: 14px;
-    color: #999999;
-    display: flex;
-    justify-content: space-between;
-    padding: 25px 0;
-  }
-
-  .post-preview .summary {
-    font-size: 16px;
-    line-height: 1.7em;
-    /*padding-left: 20px;*/
-    padding-right: 20px;
-  }
-
-  .post {
-    font-weight: 400;
-    padding-bottom: 45px;
-    margin: 0;
-    display: grid;
-  }
-
-  .post .title {
-    text-align: left;
-    font-size: 30px;
-    margin: 0;
-    /*padding-left: 20px;*/
-  }
-
-  .post .content {
-    font-size: 16px;
-    line-height: 1.7em;
-    margin: 0;
-    /*padding-left: 20px;*/
-    /*padding-right: 20px;*/
-  }
-
-  .post .content {
-    margin: 0.5em 0;
-  }
-
-  .post .meta {
-    display: flex;
-    justify-content: space-between;
-    padding: 1px 0;
-    text-decoration: none;
-    font-size: 14px;
-    color: #999999;
   }
 
 }
