--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
 <base href="{{ .Site.BaseURL }}" />
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
-<meta name="twitter:image" content="https://www.cleverlaziness.com/cl-square-144.png" />
+<meta name="twitter:image" content="https://www.cleverlaziness.com/cl-square.png" />
 {{ template "_internal/schema.html" . }}
 
 <!-- CSS and Google Fonts -->
