Twitter card optimization

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,9 +19,10 @@
 <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}"/>
 {{ end }}
 <base href="{{ .Site.BaseURL }}" />
-{{ template "_internal/opengraph.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
 <meta name="twitter:image" content="https://www.cleverlaziness.com/cl-square.png" />
+{{ template "_internal/opengraph.html" . }}
+<meta name="og:image" content="https://www.cleverlaziness.com/cl-square.png" />
 {{ template "_internal/schema.html" . }}
 
 <!-- CSS and Google Fonts -->
