--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -9,8 +9,8 @@ body {
 
 .main {
   margin: 0 auto;
-  padding: 0 10px;
-  max-width: 780px;
+  padding: 0 1em;
+  max-width: 50em;
 }
 
 h1 {
@@ -91,13 +91,13 @@ a {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 65px;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
 
 .siteTitle {
   display: grid;
-  font-size: 50px;
+  font-size: 3.1em;
 }
 
 .brand {
@@ -111,14 +111,14 @@ a {
 .nav-item {
   display: flex;
   justify-content: center;
-  padding-top: 10px;
+  padding-top: 0.2em;
 }
 
 .nav-item-title {
   font-weight: 400;
-  font-size: 20px;
+  font-size: .4em;
   border-bottom: 1.5px solid #6DBDFE;
-  margin: 0 5px;
+  margin: 0 .3em;
 }
 
 .nav-item .nav-item-title {
@@ -134,16 +134,16 @@ a {
 .post-preview {
   font-weight: 400;
   text-decoration: none;
-  padding-bottom: 45px;
+  padding-bottom: 4em;
   margin: 0;
   display: grid;
 }
 
 .post-preview .title {
-  font-size: 30px;
+  font-size: 1.9em;
   text-align: center;
   margin: 0;
-  padding-bottom: 32px;
+  padding-bottom: 1em;
 }
 
 .post-preview a {
@@ -151,41 +151,36 @@ a {
 }
 
 .post-preview .date {
-  font-size: 14px;
+  font-size: 0.9em;
   color: #999999;
   display: flex;
   justify-content: space-between;
-  padding: 25px 0;
+  padding: 1.5em 0;
 }
 
 .post-preview .summary {
-  font-size: 16px;
+  font-size: 1em;
   line-height: 1.5em;
-}
-
-.divider {
-  max-width: 15px;
-  padding-top: 25px;
 }
 
 
 /* Post */
 .post {
   font-weight: 400;
-  padding-bottom: 45px;
+  padding-bottom: 3em;
   margin: 0;
   display: grid;
 }
 
 .post .title {
   text-align: center;
-  font-size: 30px;
+  font-size: 1.9em;
   margin: 0;
-  padding-bottom: 8px;
+  padding-bottom: 0.22em;
 }
 
 .post .content {
-  font-size: 16px;
+  font-size: 1em;
   line-height: 1.5em;
   margin: 0;
 }
@@ -197,9 +192,9 @@ a {
 .post .meta {
   display: flex;
   justify-content: space-between;
-  padding: 1px 0;
+  padding: 0.1em 0;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 0.9em;
   color: #999999;
 }
 
@@ -212,7 +207,7 @@ a {
 
 .content-item {
   margin: 0.3em;
-  padding-bottom: 10px;
+  padding-bottom: 0.5em;
 }
 
 .content-item a {
@@ -232,12 +227,12 @@ a {
 
 .post-list .title {
   margin: 0 0.1em;
-  font-size: 22px;
+  font-size: 1.15em;
   text-align: left;
 }
 
 /*.content-list-date {
-  font-size: 22px;
+  font-size: 1.15em;
   text-align: left;
 }*/
 
@@ -245,7 +240,7 @@ a {
 /* Tags */
 .tag a {
   text-decoration: none;
-  font-size: 14px;
+  font-size: 1em;
   font-weight: 400;
   color: #999999;
 }
@@ -258,13 +253,7 @@ a {
   text-decoration: none;
 }
 
-.terms .term {
-  padding-top: 8px;
-  /*padding-left: 19px;*/
-}
-
 .term-title {
-  font-size: 22px;
   font-weight: 400;
   text-align: left;
 }
@@ -288,10 +277,6 @@ a {
   justify-content: flex-start;
 }
 
-.page-num {
-  padding: 0 10px;
-}
-
 .page-nav .page-next a {
   color: #3d3d3d;
   display: flex;
@@ -303,9 +288,9 @@ a {
 .foot {
   display: grid;
   font-family: 'Oswald', sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 400;
-  padding-top: 50px;
+  padding-top: 3em;
 }
 
 .social-links-footer {
@@ -320,7 +305,7 @@ a {
 .social-link {
   text-transform: uppercase;
   border-bottom: 1.5px solid #6DBDFE;
-  margin: 0 5px;
+  margin: 0 0.3em;
 }
 
 .social-link:hover {
@@ -332,9 +317,8 @@ a {
   text-decoration: none;
   color: #3d3d3d;
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 15px;
+  margin: 1em 0;
+  padding-top: 0.5em;
 }
 
 .copyright a {
