--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,6 +1,6 @@
 <div class="content-item">
     <a href="{{ .Permalink }}">
-    <div class="post-list"><h3 class="title"> {{ .Title }}</h3></div>
+    <div class="post-list"><h3 class="title start"> {{ .Title }}</h3></div>
     </a>
-    <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+    <div class="date end">{{ .Date.Format "Jan 2, 2006" }}</div>
 </div>
