--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,6 @@
-  </div>
-
-  <footer class="foot">
+  <footer class="foot navigation">
     {{ partial "social-links-footer.html" . }}
     <div class="copyright"><a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}Copyright {{ end }}</a>&copy{{ .Site.Copyright }}</div>
   </footer>
-
 </body>
 </html>
