--- a/layouts/partials/paginator-menu.html
+++ b/layouts/partials/paginator-menu.html
@@ -1,12 +1,12 @@
 
 <div class="page-nav">
-  <div class="page-prev">
+  <div class="page-prev explore">
     {{ if .Paginator.HasPrev }}
         <a href="{{ .Paginator.Prev.URL }}" title="Previous page">Recent</a>
     {{ end }}
   </div>
 
-  <div class="page-next">
+  <div class="page-next explore">
     {{ if .Paginator.HasNext }}
     <a href="{{ .Paginator.Next.URL }}" title="Next page">Older</a>
     {{ end }}
