--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -2,13 +2,13 @@ body {
   font-family: 'Rubik', sans-serif;
   font-weight: 400;
   margin: 0;
-  padding: 20px 10px;
+  padding: 20px 15px;
   color: #3d3d3d;
 }
 
 .main {
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0;
   max-width: 800px;
 }
 
@@ -22,7 +22,7 @@ body {
 }
 
 .continue {
-  font-size: 17px;
+  font-size: 18px;
 }
 
 .end {
@@ -52,12 +52,12 @@ a {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   text-align: center;
-  padding-bottom: 80px;
+  padding-bottom: 40px;
 }
 
 .siteTitle {
   display: grid;
-  font-size: 55px;
+  font-size: 48px;
 }
 
 .brand {
@@ -84,7 +84,7 @@ a {
 .post-preview {
   padding-bottom: 4em;
   margin: 0;
-  display: grid;
+
 }
 
 .post-preview .title {
@@ -125,15 +125,14 @@ a {
 
 /* Post */
 .post {
-  padding-bottom: 80px;
-  margin: 0 auto;
+  padding-bottom: 40px;
   display: grid;
 }
 
 .post .title {
   text-align: center;
   margin: 0;
-  padding-bottom: 10px;
+  padding-bottom: 9px;
 }
 
 .post .content {
@@ -250,6 +249,17 @@ a {
 
 /* Mobile Breakpoint */
 @media only screen and (min-width: 400px) {
+
+  body {
+    margin: 0;
+    padding: 20px 15px;
+  }
+
+  .main {
+    margin: 0 auto;
+    padding: 0;
+    max-width: 800px;
+  }
 
   nav {
     flex-flow: row wrap;
