--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -7,9 +7,11 @@ body {
 }
 
 .main {
+  display: grid;
   margin: 0 auto;
   padding: 0;
   max-width: 800px;
+  border: 1px solid red;
 }
 
 .explore {
@@ -52,7 +54,7 @@ a {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
   text-align: center;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 .siteTitle {
@@ -66,8 +68,10 @@ a {
 }
 
 .nav-item {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
+  grid-column-gap: 1px;
 }
 
 .nav-item-title {
@@ -99,8 +103,7 @@ a {
 
 .post-preview .date {
   color: #999999;
-  display: flex;
-  justify-content: space-between;
+  text-align: left;
   padding: 25px 0 0;
 }
 
@@ -112,14 +115,12 @@ a {
 
 .page-nav .page-prev a {
   color: #999999;
-  display: flex;
-  justify-content: flex-start;
+  text-align: left;
 }
 
 .page-nav .page-next a {
   color: #999999;
-  display: flex;
-  justify-content: flex-end;
+  text-align: right;
 }
 
 
@@ -158,12 +159,13 @@ a {
 /* Archive */
 .content-list {
   padding-bottom: 40px;
+  display: grid;
 }
 
 .content-list-date {
   text-align: center;
   color: #999999;
-  padding-bottom: 27px
+  padding-bottom: 27px;
 }
 
 .content-item {
@@ -171,8 +173,7 @@ a {
 }
 
 .post-list {
-  display: flex;
-  justify-content: center;
+  display: grid;
 }
 
 .post-list .title {
@@ -210,8 +211,10 @@ a {
 }
 
 .social-links-footer {
-  display: flex;
-  justify-content: center;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  grid-column-gap: 1px;
 }
 
 .social-link {
@@ -244,14 +247,4 @@ a {
 .sitemap {
     margin: auto;
     width: 50%;
-}
-
-
-/* Mobile Breakpoint */
-@media only screen and (min-width: 400px) {
-
-  nav {
-    flex-flow: row wrap;
-  }
-
 }
