--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,7 +4,7 @@
     <h1 id="title">{{ .Title }} :(</h1>
 </div>
 
-<!-- <div class="sitemap" >
+<div class="sitemap" >
   <h2>Pages</h2>
   <ul>
   {{ range (where .Site.Pages.ByTitle ".Type" "page") }}
@@ -12,7 +12,7 @@
           <a href="{{ .Permalink }}">{{ .Title }}</a>
       </article></li>
   {{ end }}
-  </ul> -->
+  </ul>
 
   <h2>Posts</h2>
   <ul>
