--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,7 +1,5 @@
 <div class="tags">
-    {{ range .Params.tags }}
-      <div class="tag">
-        <a href="/tags/{{ . | urlize }}">#{{.}}</a>
-      </div>
-    {{ end }}
+  {{ range .Params.tags }}
+    <div class="tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></div>
+  {{ end }}
 </div>
