--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,20 @@
-{{ partial "header.html" . }}
-<article class="post">
-  <h1 class="title start">{{ .Title }}</h1>
-  <div class="content continue">{{ .Content }}</div>
-  <div class="meta end">
-    {{ if .Params.showthedate }}
-      {{ .Date.Format "Jan 2, 2006" }}
-    {{ end }}
-    {{ partial "tags.html" . }}
-  </div>
-</article>
-{{ partial "footer.html" . }}
+<!DOCTYPE html>
+<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+{{ partial "head.html" . }}
+<body>
+  <div class="main">
+  {{ partial "header.html" . }}
+  <article class="post">
+    <h1 class="title start">{{ .Title }}</h1>
+    <div class="content continue">{{ .Content }}</div>
+    <div class="meta end">
+      {{ if .Params.showthedate }}
+        {{ .Date.Format "Jan 2, 2006" }}
+      {{ end }}
+      {{ partial "tags.html" . }}
+    </div>
+  </article>
+  {{ partial "footer.html" . }}
+  </div> <!-- main end -->
+</body>
+</html>
