--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,27 +1,31 @@
-{{ partial "header.html" . }}
-
-<div class="err-404" >
-    <h1 id="title">{{ .Title }} :(</h1>
-</div>
-
-<div class="sitemap" >
-  <h2>Pages</h2>
-  <ul>
-  {{ range (where .Site.Pages.ByTitle ".Type" "page") }}
-      <li><article itemscope itemtype="http://schema.org/Blog">
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
-      </article></li>
-  {{ end }}
-  </ul>
-
-  <h2>Posts</h2>
-  <ul>
-  {{ range (where .Site.Pages.ByTitle ".Type" "archive") }}
-      <li><article itemscope itemtype="http://schema.org/Blog">
-          <a href="{{ .Permalink }}">{{ .Title }}</a>
-      </article></li>
-  {{ end }}
-  </ul>
-
-<div>
-{{ partial "footer.html" . }}
+<!DOCTYPE html>
+<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+{{ partial "head.html" . }}
+<body>
+  <div class="main">
+    {{ partial "header.html" . }}
+    <div class="err-404" >
+        <h1 id="title">{{ .Title }} :(</h1>
+    </div>
+    <div class="sitemap" >
+    <h2>Pages</h2>
+    <ul>
+    {{ range (where .Site.Pages.ByTitle ".Type" "page") }}
+        <li><article itemscope itemtype="http://schema.org/Blog">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </article></li>
+    {{ end }}
+    </ul>
+    <h2>Posts</h2>
+    <ul>
+    {{ range (where .Site.Pages.ByTitle ".Type" "archive") }}
+        <li><article itemscope itemtype="http://schema.org/Blog">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </article></li>
+    {{ end }}
+    </ul>
+    <div>
+    {{ partial "footer.html" . }}
+  </div> <!-- main end -->
+</body>
+</html>
