--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,12 +1,20 @@
-{{ partial "header.html" . }}
-  <div class="terms">
-  {{ $data := .Data }}
-  {{ range $key, $value := .Data.Terms }}
-    <div class="term">
-      <a href="{{ $data.Plural }}/{{ $key | urlize }}">
-        <div class="term-title">{{ $key }} ({{ len $value }}) </div>
-      </a>
-    </div> <!-- term -->
-  {{ end }}
-  </div> <!-- terms -->
-{{ partial "footer.html" . }}
+<!DOCTYPE html>
+<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+{{ partial "head.html" . }}
+<body>
+  <div class="main">
+  {{ partial "header.html" . }}
+    <div class="terms">
+    {{ $data := .Data }}
+    {{ range $key, $value := .Data.Terms }}
+      <div class="term">
+        <a href="{{ $data.Plural }}/{{ $key | urlize }}">
+          <div class="term-title">{{ $key }} ({{ len $value }}) </div>
+        </a>
+      </div> <!-- term -->
+    {{ end }}
+    </div> <!-- terms -->
+  {{ partial "footer.html" . }}
+  </div> <!-- main end -->
+</body>
+</html>
